Added tags to clients page

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"sprintf": "",
 		"emailjs": "",
 		"moment": "",
-		"async": ""
+		"async": "",
+		"passport-oauth": ""
 	},
 	"devDependencies": {
 		"supervisor": ""
