--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-	"name":	"biomed-portal",
-	"version": "0.0.1",
-	"author": "Dobie Wollert",
-	"description": "Atlantic Biomedical Portal",
-	"private": true,
-	"dependencies": {
-		"express": "",
-		"mongoose": "",
-		"mongoose-pureautoinc": "",
-		"passport": "",
-		"passport-google-oauth": "",
-		"piler": "",
-		"less": "",
-		"socket.io": "",
-		"jade": "",
-		"googleapis": "",
-		"sprintf": "",
-		"emailjs": "",
-		"moment": "",
-		"async": "",
-		"passport-oauth": ""
-	},
-	"devDependencies": {
-		"supervisor": ""
-	}
+  "name": "biomed-portal",
+  "version": "0.0.1",
+  "author": "Dobie Wollert",
+  "description": "Atlantic Biomedical Portal",
+  "private": true,
+  "dependencies": {
+    "express": "",
+    "mongoose": "",
+    "mongoose-pureautoinc": "",
+    "passport": "",
+    "passport-google-oauth": "",
+    "piler": "",
+    "less": "",
+    "socket.io": "",
+    "jade": "",
+    "googleapis": "",
+    "sprintf": "",
+    "emailjs": "",
+    "moment": "",
+    "async": "",
+    "passport-oauth": "",
+    "node-uuid": "~1.4.1",
+    "MD5": "~1.2.1"
+  },
+  "devDependencies": {
+    "supervisor": ""
+  }
 }
